Experience 경력 최신화

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -1,5 +1,6 @@
 // Mixins
 // ---------------------------------------/
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
@@ -51,7 +52,7 @@
 // type utilities
 
 @mixin sans {
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Noto Sans KR", sans-serif, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 @mixin sans_light {
@@ -75,7 +76,7 @@
 }
 
 @mixin serif {
-  font-family: "Lora", "Minion Pro", Palatino, Georgia, serif;
+  font-family: "Noto Sans KR", sans-serif, "Lora", "Minion Pro", Palatino, Georgia, serif;
 }
 
 @mixin serif_regular {
